<resources xmlns:moz="http://mozac.org/tools" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_private_5">Private %s</string>
    <string name="app_name_private_4">%s (Private)</string>
    <string name="content_description_menu">More options</string>
    <string name="content_description_private_browsing_button">Enable private browsing</string>
    <string name="content_description_disable_private_browsing_button">Disable private browsing</string>
    <string name="search_hint">Search or enter address</string>
    <string name="history_search_hint">Search history</string>
    <string name="bookmark_search_hint">Search bookmarks</string>
    <string name="tab_search_hint">Search tabs</string>
    <string name="application_search_hint">Enter search terms</string>
    <string name="no_open_tabs_description">Your open tabs will be shown here.</string>
    <string name="no_private_tabs_description">Your private tabs will be shown here.</string>
    <string name="tab_tray_multi_select_title">%1$d selected</string>
    <string name="tab_tray_add_new_collection">Add new collection</string>
    <string name="tab_tray_add_new_collection_name">Name</string>
    <string name="tab_tray_select_collection">Select collection</string>
    <string name="tab_tray_close_multiselect_content_description">Exit multiselect mode</string>
    <string name="tab_tray_collection_button_multiselect_content_description">Save selected tabs to collection</string>
    <string name="tab_tray_multiselect_selected_content_description">Selected</string>
    <string name="recently_saved_title">Recently saved</string>
    <string name="recently_saved_show_all_content_description_2">Show all saved bookmarks</string>
    <string name="recently_saved_menu_item_remove">Remove</string>
    <string name="about_content">%1$s is produced by Mozilla.</string>
    <string name="private_browsing_placeholder_description_2">
        %1$s clears your search and browsing history from private tabs when you close them or quit the app. While this doesn’t make you anonymous to websites or your internet service provider, it makes it easier to keep what you do online private from anyone else who uses this device.</string>
    <string name="private_browsing_common_myths">
       Common myths about private browsing
    </string>
    <string name="private_mode_cfr_message" moz:removedIn="111" tools:ignore="UnusedResources">Launch next private tab in one tap.</string>
    <string name="private_mode_cfr_message_2">Launch your next private tab in one tap.</string>
    <string name="private_mode_cfr_pos_button_text">Add to Home screen</string>
    <string name="cfr_neg_button_text">No thanks</string>
    <string name="open_in_app_cfr_info_message_2">You can set %1$s to automatically open links in apps.</string>
    <string name="open_in_app_cfr_positive_button_text">Go to settings</string>
    <string name="open_in_app_cfr_negative_button_text">Dismiss</string>
    <string name="cfr_dismiss_button_default_content_description" moz:removedIn="110" tools:ignore="UnusedResources">Dismiss</string>
    <string name="tcp_cfr_message">Our most powerful privacy feature yet isolates cross-site trackers.</string>
    <string name="tcp_cfr_learn_more">Learn about Total Cookie Protection</string>
    <string name="camera_permissions_needed_message">Camera access needed. Go to Android settings, tap permissions, and tap allow.</string>
    <string name="camera_permissions_needed_positive_button_text">Go to settings</string>
    <string name="camera_permissions_needed_negative_button_text">Dismiss</string>
    <string name="tab_tray_close_tabs_banner_message">Set open tabs to close automatically that haven’t been viewed in the past day, week, or month.</string>
    <string name="tab_tray_close_tabs_banner_positive_button_text">View options</string>
    <string name="tab_tray_close_tabs_banner_negative_button_text">Dismiss</string>
    <string name="tab_tray_inactive_onboarding_message">Tabs you haven’t viewed for two weeks get moved here.</string>
    <string name="tab_tray_inactive_onboarding_button_text">Turn off in settings</string>
    <string name="tab_tray_inactive_auto_close_title">Auto-close after one month?</string>
    <string name="tab_tray_inactive_auto_close_body_2">%1$s can close tabs you haven’t viewed over the past month.</string>
    <string name="tab_tray_inactive_auto_close_button_content_description">Close</string>
    <string name="tab_tray_inactive_turn_on_auto_close_button_2">Turn on auto-close</string>
    <string name="home_screen_shortcut_open_new_tab_2">New tab</string>
    <string name="home_screen_shortcut_open_new_private_tab_2">New private tab</string>
    <string name="recent_tabs_header">Jump back in</string>
    <string name="recent_tabs_show_all">Show all</string>
    <string name="recent_tabs_show_all_content_description_2">Show all recent tabs button</string>
    <string name="recent_tabs_see_all_synced_tabs_button_text">See all synced tabs</string>
    <string name="recent_tabs_synced_device_icon_content_description">Synced device</string>
    <string name="recent_synced_tab_menu_item_remove">Remove</string>
    <string name="recent_tab_menu_item_remove">Remove</string>
    <string name="history_metadata_header_2">Recently visited</string>
    <string name="recently_visited_menu_item_remove">Remove</string>
    <string name="past_explorations_show_all_content_description_2">Show all past explorations</string>
    <string name="browser_menu_back">Back</string>
    <string name="browser_menu_forward">Forward</string>
    <string name="browser_menu_refresh">Refresh</string>
    <string name="browser_menu_stop">Stop</string>
    <string name="browser_menu_add_ons">Add-ons</string>
    <string name="browser_menu_account_settings">Account info</string>
    <string name="no_add_ons">No add-ons here</string>
    <string name="browser_menu_help">Help</string>
    <string name="browser_menu_whats_new">What’s new</string>
    <string name="browser_menu_settings">Settings</string>
    <string name="browser_menu_library">Library</string>
    <string name="browser_menu_desktop_site">Desktop site</string>
    <string name="browser_menu_add_to_homescreen">Add to Home screen</string>
    <string name="browser_menu_install_on_homescreen">Install</string>
    <string name="resync_button_content_description">Resync</string>
    <string name="browser_menu_find_in_page">Find in page</string>
    <string name="browser_menu_save_to_collection_2">Save to collection</string>
    <string name="browser_menu_share">Share</string>
    <string name="browser_menu_open_in_fenix">Open in %1$s</string>
    <string name="browser_menu_powered_by">POWERED BY %1$s</string>
    <string name="browser_menu_powered_by2">Powered by %1$s</string>
    <string name="browser_menu_read">Reader view</string>
    <string name="browser_menu_read_close">Close reader view</string>
    <string name="browser_menu_open_app_link">Open in app</string>
    <string name="browser_menu_customize_reader_view">Customize reader view</string>
    <string name="browser_menu_add">Add</string>
    <string name="browser_menu_edit">Edit</string>
    <string name="browser_menu_customize_home_1">Customize homepage</string>
    <string name="browser_toolbar_home">Home screen</string>
    <string name="a11y_selected_locale_content_description">Selected language</string>
    <string name="default_locale_text">Follow device language</string>
    <string name="locale_search_hint">Search language</string>
    <string name="search_scan_button">Scan</string>
    <string name="search_engine_button">Search engine</string>
    <string name="search_shortcuts_engine_settings">Search engine settings</string>
    <string name="awesomebar_clipboard_title">Fill link from clipboard</string>
    <string name="search_suggestions_onboarding_allow_button">Allow</string>
    <string name="search_suggestions_onboarding_do_not_allow_button">Don’t allow</string>
    <string name="search_suggestions_onboarding_title">Allow search suggestions in private sessions?</string>
    <string name="search_suggestions_onboarding_text">%s will share everything you type in the address bar with your default search engine.</string>
    <string name="search_engine_suggestions_title">Search %s</string>
    <string name="search_engine_suggestions_description">Search directly from the address bar</string>
    <string name="search_settings_menu_item">Search settings</string>
    <string name="search_header_menu_item" moz:RemovedIn="109" tools:ignore="UnusedResources">This time search:</string>
    <string name="search_header_menu_item_2">This time search in:</string>
    <string name="onboarding_home_screen_jump_back_contextual_hint_2">Meet your personalized homepage. Recent tabs, bookmarks, and search results will appear here.</string>
    <string name="onboarding_home_welcome_new_title">Break free from big tech.</string>
    <string name="onboarding_home_welcome_subtitle">Get the unfiltered truth.</string>
    <string name="onboarding_home_welcome_subtitle2">Protect your privacy</string>
    <string name="onboarding_home_welcome_title_2">Welcome to Freespoke</string>
    <string name="onboarding_home_welcome_description">Get Full-Perspective and Full Anonymity When You Search. \n \n Search you can trust.</string>
    <string name="onboarding_home_sync_title_3">Switching screens is easier than ever</string>
    <string name="newsfeed_onboarding">Newsfeed</string>
    <string name="navigating_the_news_onboarding">Navigating the news is tough. We help you quickly get the full story by labeling media sources so you can see stories covered from different perspectives.</string>
    <string name="onboarding_home_sync_description">Pick up where you left off with tabs from other devices now on your homepage.</string>
    <string name="onboarding_shop_usa">Shop USA</string>
    <string name="onboarding_shop_subtitle">We curate high-quality, American made brands and products for you to explore and shop.</string>
    <string name="onboarding_search">Search</string>
    <string name="onboarding_search_subtitle">We provide quality search so you can easily find results from all perspectives, while protecting your privacy with every search.</string>
    <string name="onboarding_tabs">Tabs</string>
    <string name="onboarding_tabs_subtitle">Save your favorite content all in once place. Making it quicker to pick up where you left off, or frequent your favorite websites and search results.</string>
    <string name="onboarding_next_button">Next</string>
    <string name="set_freespoke_as_your_default_browser">Set Freespoke as your default browser.</string>
    <string name="search_better_browse_better">Search better, browse better:</string>
    <string name="onboarding_default_browser_title">Make Freespoke your favorite.</string>
    <string name="onboarding_default_browser_description">Set Freespoke as your default browser and break free from big tech.</string>
    <string name="onboarding_default_browser_skip">No thanks, I’ll stick with Big Tech</string>
    <string name="onboarding_notification_settings_title">Stay up to date with the latest.</string>
    <string name="onboarding_notification_settings_description">Enable notifications from Freespoke</string>
    <string name="onboarding_notification_settings_skip">No thanks to notifications</string>
    <string name="onboarding_complete_title">Thanks for joining the Freespoke revolution.</string>
    <string name="search_for_everything">Search for anything...</string>
    <string name="get_the_full_story_with_freespoke">Get the full story with Freespoke.</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="my_bookmarks">My Bookmarks</string>
    <string name="view_all">View all</string>
    <string name="view_more">View More</string>
    <string name="shop_usa_store_title">Shop USA Store</string>
</resources>