<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".freespokehome.FreespokeHomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/custom_home_background_color">

        <org.mozilla.fenix.freespokeaccount.profile.ProfileBubbleWrapperView
            android:id="@+id/freespokeProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/freespokeIcyBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="center"
            app:srcCompat="@drawable/iceberg_hompage_background"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/freespokeLogo"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            app:srcCompat="@drawable/freespoke_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/get_the_full_story_with_freespoke"
            android:textColor="@color/freespoke_font_color_custom_home"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/freespokeLogo"
            app:layout_constraintTop_toBottomOf="@id/freespokeLogo"
            app:layout_constraintStart_toStartOf="@+id/freespokeLogo" />

        <EditText
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/search_view_rounded_background"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:hint="@string/search_for_everything"
            android:inputType="text"
            android:padding="22dp"
            android:textColor="@color/freespoke_font_color"
            android:textColorHint="@color/freespoke_font_color"
            app:drawableTint="@color/freespoke_font_color"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:padding="12dp"
            android:background="@color/custom_home_background_color"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            tools:ignore="MozMultipleConstraintLayouts">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/freespokeWayContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/website_chip_background"
                android:orientation="vertical"
                android:paddingTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="12dp">

                <TextView
                    android:id="@+id/quick_links_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:paddingHorizontal="32dp"
                    android:textAllCaps="true"
                    android:textColor="@color/freespoke_font_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/quickLinksList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/quick_links_item"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/bookmarksContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/website_chip_background"
                android:orientation="vertical"
                android:paddingStart="12dp"
                android:paddingTop="20dp"
                android:paddingEnd="12dp"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/freespokeWayContainer"
                tools:layout_editor_absoluteX="-4dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableEnd="@drawable/ic_pin"
                    android:drawablePadding="4dp"
                    android:drawableTint="@color/freespoke_font_color"
                    android:text="@string/my_bookmarks"
                    android:textAllCaps="true"
                    android:textColor="@color/freespoke_font_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bookmarkList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="4"
                    tools:listitem="@layout/bookmark_short_list_item" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/viewMoreBookmarksBtn"
                    android:layout_width="120dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:background="@color/custom_home_search_color"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/view_all"
                    android:textAllCaps="false"
                    android:gravity="center_horizontal"
                    android:textColor="@color/freespoke_font_color"
                    app:cornerRadius="4dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/newsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/website_chip_background"
                android:orientation="vertical"
                android:paddingStart="12dp"
                android:paddingTop="20dp"
                android:paddingEnd="12dp"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/bookmarksContainer"
                tools:layout_editor_absoluteX="12dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableEnd="@drawable/ic_fire"
                    android:drawablePadding="4dp"
                    android:drawableTint="@color/freespoke_font_color"
                    android:text="Trending news"
                    android:textAllCaps="true"
                    android:textColor="@color/freespoke_font_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trending_news_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    tools:itemCount="2"
                    tools:listitem="@layout/trending_news_list_item" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/viewMoreNewsBtn"
                    android:layout_width="120dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@color/custom_home_search_color"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/view_more"
                    android:textAllCaps="false"
                    android:gravity="center_horizontal"
                    android:textColor="@color/freespoke_font_color"
                    app:cornerRadius="4dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/recentViewedContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/website_chip_background"
                android:orientation="vertical"
                android:paddingStart="12dp"
                android:paddingTop="20dp"
                android:paddingEnd="12dp"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/newsContainer">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableEnd="@drawable/ic_recent_item"
                    android:drawablePadding="4dp"
                    android:drawableTint="@color/freespoke_font_color"
                    android:text="@string/recently_viewed"
                    android:textAllCaps="true"
                    android:textColor="@color/freespoke_font_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recentlyViewedList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_gravity="center_horizontal"
                    android:fitsSystemWindows="true"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:itemCount="10"
                    app:spanCount="5"
                    tools:listitem="@layout/bookmark_short_list_item" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/viewMoreRecentlyViewsBtn"
                    android:layout_width="120dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:background="@color/custom_home_search_color"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/view_all"
                    android:textAllCaps="false"
                    android:gravity="center_horizontal"
                    android:textColor="@color/freespoke_font_color"
                    app:cornerRadius="4dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/shopCollectionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/website_chip_background"
                android:orientation="vertical"
                android:paddingStart="12dp"
                android:paddingTop="20dp"
                android:paddingEnd="12dp"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/recentViewedContainer">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableEnd="@drawable/ic_shopping"
                    android:drawablePadding="4dp"
                    android:drawableTint="@color/freespoke_font_color"
                    android:text="@string/shop_usa_store_title"
                    android:textAllCaps="true"
                    android:textColor="@color/freespoke_font_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/shopList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_gravity="center_horizontal"
                    android:fitsSystemWindows="true"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:itemCount="10"
                    app:spanCount="2"
                    tools:listitem="@layout/shop_item" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/viewMoreShopsBtn"
                    android:layout_width="120dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:background="@color/custom_home_search_color"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/view_more"
                    android:textAllCaps="false"
                    android:gravity="center_horizontal"
                    android:textColor="@color/freespoke_font_color"
                    app:cornerRadius="4dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
